--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li><a><i class="fa fa-edit"></i> Rank History <span class="fa fa-chevron-down"></span></a>
+                                <li><a><i class="fa fa-arrow-up"></i> Rank History <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu" style="display: none">
                                         <li><a href="form.html">General Form</a>
                                         </li>
@@ -103,7 +103,7 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li><a><i class="fa fa-desktop"></i> Featured <span class="fa fa-chevron-down"></span></a>
+                                <li><a><i class="fa fa-bookmark"></i> Featured <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu" style="display: none">
                                         <li><a href="general_elements.html">General Elements</a>
                                         </li>
@@ -125,7 +125,7 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li><a><i class="fa fa-table"></i> Ratings <span class="fa fa-chevron-down"></span></a>
+                                <li><a><i class="fa fa-star-half-o"></i> Ratings <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu" style="display: none">
                                         <li><a href="tables.html">Tables</a>
                                         </li>
@@ -133,7 +133,7 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li><a><i class="fa fa-bar-chart-o"></i> Reviews <span class="fa fa-chevron-down"></span></a>
+                                <li><a><i class="fa fa-comments"></i> Reviews <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu" style="display: none">
                                         <li><a href="chartjs.html">Chart JS</a>
                                         </li>
@@ -152,7 +152,7 @@
                         <div class="menu_section">
                             <h3>Live On</h3>
                             <ul class="nav side-menu">
-                                <li><a><i class="fa fa-bug"></i> Additional Pages <span class="fa fa-chevron-down"></span></a>
+                                <li><a><i class="fa fa-download "></i> Downloads <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu" style="display: none">
                                         <li><a href="e_commerce.html">E-commerce</a>
                                         </li>
@@ -166,7 +166,7 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li><a><i class="fa fa-windows"></i> Extras <span class="fa fa-chevron-down"></span></a>
+                                <li><a><i class="fa fa-cubes"></i> Extras <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu" style="display: none">
                                         <li><a href="page_404.html">404 Error</a>
                                         </li>
@@ -345,7 +345,7 @@
                     <div class="animated flipInY col-md-2 col-sm-4 col-xs-4 tile_stats_count">
                         <div class="left"></div>
                         <div class="right">
-                            <span class="count_top"><i class="fa fa-user"></i> Promotions</span>
+                            <span class="count_top"><i class="fa fa-tags"></i> Promotions</span>
                             <div class="count green">2,500</div>
                             <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>
                         </div>
@@ -353,7 +353,7 @@
                     <div class="animated flipInY col-md-2 col-sm-4 col-xs-4 tile_stats_count">
                         <div class="left"></div>
                         <div class="right">
-                            <span class="count_top"><i class="fa fa-user"></i> Facebook conversions</span>
+                            <span class="count_top"><i class="fa fa-thumbs-up"></i> Facebook conversions</span>
                             <div class="count red">4,567</div>
                             <span class="count_bottom"><i class="red"><i class="fa fa-sort-desc"></i>12% </i> From last Week</span>
                         </div>
@@ -361,7 +361,7 @@
                     <div class="animated flipInY col-md-2 col-sm-4 col-xs-4 tile_stats_count">
                         <div class="left"></div>
                         <div class="right">
-                            <span class="count_top"><i class="fa fa-user"></i> Advertisign Campaign</span>
+                            <span class="count_top"><i class="fa fa-line-chart"></i> Advertising Campaign</span>
                             <div class="count green">2,315</div>
                             <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>
                         </div>
@@ -369,7 +369,7 @@
                     <div class="animated flipInY col-md-2 col-sm-4 col-xs-4 tile_stats_count">
                         <div class="left"></div>
                         <div class="right">
-                            <span class="count_top"><i class="fa fa-user"></i> Refunds</span>
+                            <span class="count_top"><i class="fa fa-credit-card"></i> Refunds</span>
                             <div class="count red">7,325</div>
                             <span class="count_bottom"><i class="red"><i class="fa fa-sort-desc"></i>30% </i> From last Week</span>
                         </div>
@@ -415,9 +415,9 @@
                 <!-- footer content -->
 
                 <footer >
-                    <div class="">
+                    <div class="footer;text-align:center">
                         <p class="pull-right">Design style by <i>KimLabs</i> |
-                             </i> Made by <b>Aditya Purandare, Swapnil Phulse, Vijayalkshmi Rana and Vikramsinh Jadhav </b>
+                             </i>Made by <b>Aditya Purandare, Swapnil Phulse, Vijayalkshmi Rana and Vikramsinh Jadhav</b>
                         </p>
                     </div>
                     <div class="clearfix"></div>
