--- a/index.html
+++ b/index.html
@@ -475,10 +475,15 @@
             $.get(file,function(txt){
                 //n lines read
                 var lines = txt.split('\n');
-                GR=(Math.random() * (1.50 - 1.20) + 1.20).toFixed(2);
 
+                var datapoint = [];
+                var x=0;
+                var dataArr1 = [[]];
+                var dataArr2 = [[]];
                 for (var loop_var=0,len=lines.length;loop_var<len;++loop_var){
                     //line of text
+                    GR=(Math.random() * (1.30 - 1.10) + 1.10).toFixed(2);
+
                     var values = lines[loop_var].split('\t');
                     //separated by tab, picked latter part
                     var value = values[1];
@@ -497,65 +502,79 @@
                             forecast_sales=current_sales*GR;
                             fs= forecast_sales.toFixed(0);
                             console.log(year+" "+month+" "+cs+" "+ fs);
+                            dataArr1.push([gd(year, month, 1), cs]);  
+                            dataArr2.push([gd(year, month, 1), fs]);
+                        }
+                    }    
+                     
+                    console.log("Hello1");                     
+                    for(var a=0, l=dataArr2.length; a<l;a++ ){
+                        //console.log("Hello3");
+                        console.log("Array1:"+dataArr1[a][1]);
+                        console.log("Array2:"+dataArr2[a][1]);
+                    }
+                    if(loop_var==lines.length-2)
+                    {
+                        console.log("Hello3");
+                        var data1 = [[gd(2012, 1, 1), 17], [gd(2012, 2, 2), 74], [gd(2012, 3, 3), 6], [gd(2012, 4, 4), 39], [gd(2012, 5, 5), 20], [gd(2012, 6, 6), 85]];
+
+                        var data2 = [[gd(2012, 1, 1), 82], [gd(2012, 2, 2), 23], [gd(2012, 3, 3), 66], [gd(2012, 4, 4), 9], [gd(2012, 5, 5), 119], [gd(2012, 6, 6), 6]];
+                        $("#canvas_dahs").length && $.plot($("#canvas_dahs"), [
+                            dataArr1, dataArr2
+                        ], {
+                            series: {
+                                lines: {
+                                    show: false,
+                                    fill: true
+                                },
+                                splines: {
+                                    show: true,
+                                    tension: 0.4,
+                                    lineWidth: 1,
+                                    fill: 0.4
+                                },
+                                points: {
+                                    radius: 0,
+                                    show: true
+                                },
+                                shadowSize: 2
+                            },
+                            grid: {
+                                verticalLines: true,
+                                hoverable: true,
+                                clickable: true,
+                                tickColor: "#d5d5d5",
+                                borderWidth: 1,
+                                color: '#fff'
+                            },
+                            colors: ["rgba(38, 185, 154, 0.38)", "rgba(3, 88, 106, 0.38)"],
+                            xaxis: {
+                                tickColor: "rgba(51, 51, 51, 0.06)",
+                                mode: "time",
+                                tickSize: [2, "month"],
+                                //tickLength: 10,
+                                axisLabel: "Date",
+                                axisLabelUseCanvas: true,
+                                axisLabelFontSizePixels: 12,
+                                axisLabelFontFamily: 'Verdana, Arial',
+                                axisLabelPadding: 10
+                                    //mode: "time", timeformat: "%m/%d/%y", minTickSize: [1, "day"]
+                            },
+                            yaxis: {
+                                ticks: 8,
+                                tickColor: "rgba(51, 51, 51, 0.06)",
+                            },
+                            tooltip: false
+                        });
+                        console.log("Program finished!");
+
+                        function gd(year, month, day) {
+                            return new Date(year, month - 1, day).getTime();
                         }
                     }
                 }
-            }); 
-            //console.log(datamonth+" "+bookname+" "+current_price+" "+current_qty+" "+p_ideal+" "+GR);
-            var data1 = [[gd(2012, 1, 1), 17], [gd(2012, 1, 2), 74], [gd(2012, 1, 3), 6], [gd(2012, 1, 4), 39], [gd(2012, 1, 5), 20], [gd(2012, 1, 6), 85]];
-
-            var data2 = [[gd(2012, 1, 1), 82], [gd(2012, 1, 2), 23], [gd(2012, 1, 3), 66], [gd(2012, 1, 4), 9], [gd(2012, 1, 5), 119], [gd(2012, 1, 6), 6]];
-            $("#canvas_dahs").length && $.plot($("#canvas_dahs"), [
-                data1, data2
-            ], {
-                series: {
-                    lines: {
-                        show: false,
-                        fill: true
-                    },
-                    splines: {
-                        show: true,
-                        tension: 0.4,
-                        lineWidth: 1,
-                        fill: 0.4
-                    },
-                    points: {
-                        radius: 0,
-                        show: true
-                    },
-                    shadowSize: 2
-                },
-                grid: {
-                    verticalLines: true,
-                    hoverable: true,
-                    clickable: true,
-                    tickColor: "#d5d5d5",
-                    borderWidth: 1,
-                    color: '#fff'
-                },
-                colors: ["rgba(38, 185, 154, 0.38)", "rgba(3, 88, 106, 0.38)"],
-                xaxis: {
-                    tickColor: "rgba(51, 51, 51, 0.06)",
-                    mode: "time",
-                    tickSize: [1, "day"],
-                    //tickLength: 10,
-                    axisLabel: "Date",
-                    axisLabelUseCanvas: true,
-                    axisLabelFontSizePixels: 12,
-                    axisLabelFontFamily: 'Verdana, Arial',
-                    axisLabelPadding: 10
-                        //mode: "time", timeformat: "%m/%d/%y", minTickSize: [1, "day"]
-                },
-                yaxis: {
-                    ticks: 8,
-                    tickColor: "rgba(51, 51, 51, 0.06)",
-                },
-                tooltip: false
             });
-
-            function gd(year, month, day) {
-                return new Date(year, month - 1, day).getTime();
-            }
+            //console.log(year+" "+month+" "+cs+" "+ fs);
         });
     </script>
 
